Sat Mar  8 16:11:39 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* incl-local/errno.h (mask_fs_num): Add.
	* stdio/rename.c (rename): Use mask_fs_num.
	* unix/mkdir.c (mkdir): Likewise.  Remove ADFS specific error number
	check and language dependent error string check.

Fri Jan  3 17:09:59 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* include/wchar.h: Don't include bits/wchar2.h nor bits/wchar-ldbl.h.
	Reported by Ron <beeb@woosh.co.nz>.
	* include/features.h, include/sys/socket.h: Uniform local changes.

Sun Aug  4 22:03:30 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* stdlib/realpath (realpath): Return ENOENT if object does not exist.
	* incl-local/internal/symlinks.h: Move features.h include in
	__UNIXLIB_SYMLINKS test.
	* incl-local/internal/unix.h: Drop internal/symlinks.h include.
	* common/exist.c: Add internal/symlinks.h include.
	* common/objattr.c: Likewise.
	* sys/exec.c: Likewise.
	* unittest/test-realpath.c: Add.
	* unittest/include/expect-realpath.c: Add.
	* unittest/include/expect-symlink.c: Rename Create_SymLink to SymLink.
	* unittest/test-utimes.c: Follow Create_SymLink to SymLink rename.
	* unittest/test-utime.c: Likewise.
	* unittest/test-fopen.c: Likewise.
	* unittest/test-rename.c: Likewise.
	* unittest/test-symlink.c: Likewise.
	* unittest/test-readlink.c: Likewise.
	* unittest/test-stat.c: Likewise.
	(IsLink): Build conditionally.
	* unittest/include/check.c: Make functions global.
	* unittest/include/main.c: Add --stop option.

Tue May  7 23:27:42 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* Makefile.am (stdlib_src): Build realpath for SCL as well.
	* include/stdlib.h (realpath): Declare for SCL.
	* stdlib/realpath.c (realpath): Support NULL output buffer.  Support
	symlinks.  Return ENOENT when canonicalisation fails.  Support SCL.

Wed May  1 15:27:44 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* include/limits.h (PATH_MAX): Increased to 1024.

Mon Apr 15 23:10:21 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>
